tests/snapshots/integration_tests__pixi_build_list.snap
---
source: tests/integration_tests.rs
expression: output
---
_openmp_mutex 4.5-20_gnu (linux-64): BSD-3-Clause 
_openmp_mutex 4.5-20_gnu (linux-aarch64): BSD-3-Clause 
c-ares 1.34.6-hb03c661_0 (linux-64): MIT 
c-ares 1.34.6-hb5e19a0_0 (osx-64): MIT 
c-ares 1.34.6-hc919400_0 (osx-arm64): MIT 
c-ares 1.34.6-he30d5cf_0 (linux-aarch64): MIT 
ca-certificates 2026.4.22-h4c7d964_0 (noarch): ISC 
ca-certificates 2026.4.22-hbd8a1cb_0 (noarch): ISC 
curl 8.17.0-h43ecb02_1 (win-64): curl 
curl 8.17.0-h4e3cde8_1 (linux-64): curl 
curl 8.17.0-h7bfdcfb_1 (linux-aarch64): curl 
curl 8.17.0-h7dd4100_1 (osx-64): curl 
curl 8.17.0-hdece5d2_1 (osx-arm64): curl 
keyutils 1.6.3-h86ecc28_0 (linux-aarch64): LGPL-2.1-or-later 
keyutils 1.6.3-hb9d3cd8_0 (linux-64): LGPL-2.1-or-later 
krb5 1.21.3-h237132a_0 (osx-arm64): MIT 
krb5 1.21.3-h37d8d59_0 (osx-64): MIT 
krb5 1.21.3-h50a48e9_0 (linux-aarch64): MIT 
krb5 1.21.3-h659f571_0 (linux-64): MIT 
krb5 1.21.3-hdf4eb48_0 (win-64): MIT 
libcurl 8.17.0-h43ecb02_1 (win-64): curl 
libcurl 8.17.0-h4e3cde8_1 (linux-64): curl 
libcurl 8.17.0-h7bfdcfb_1 (linux-aarch64): curl 
libcurl 8.17.0-h7dd4100_1 (osx-64): curl 
libcurl 8.17.0-hdece5d2_1 (osx-arm64): curl 
libcxx 22.1.5-h19cb2f5_0 (osx-64): Apache-2.0 WITH LLVM-exception 
libcxx 22.1.5-h55c6f16_0 (osx-arm64): Apache-2.0 WITH LLVM-exception 
libedit 3.1.20250104-pl5321h7949ede_0 (linux-64): BSD-2-Clause 
libedit 3.1.20250104-pl5321h976ea20_0 (linux-aarch64): BSD-2-Clause 
libedit 3.1.20250104-pl5321ha958ccf_0 (osx-64): BSD-2-Clause 
libedit 3.1.20250104-pl5321hafb1f1b_0 (osx-arm64): BSD-2-Clause 
libev 4.33-h10d778d_2 (osx-64): BSD-2-Clause 
libev 4.33-h31becfc_2 (linux-aarch64): BSD-2-Clause 
libev 4.33-h93a5062_2 (osx-arm64): BSD-2-Clause 
libev 4.33-hd590300_2 (linux-64): BSD-2-Clause 
libgcc 15.2.0-h8acb6b2_18 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libgcc 15.2.0-he0feb66_18 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-ng 15.2.0-h69a702a_18 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-ng 15.2.0-he9431aa_18 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libgomp 15.2.0-h8acb6b2_18 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libgomp 15.2.0-he0feb66_18 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libnghttp2 1.68.1-h70048d4_0 (osx-64): MIT 
libnghttp2 1.68.1-h877daf1_0 (linux-64): MIT 
libnghttp2 1.68.1-h8f3e76b_0 (osx-arm64): MIT 
libnghttp2 1.68.1-hd3077d7_0 (linux-aarch64): MIT 
libssh2 1.11.1-h1590b86_0 (osx-arm64): BSD-3-Clause 
libssh2 1.11.1-h18c354c_0 (linux-aarch64): BSD-3-Clause 
libssh2 1.11.1-h9aa295b_0 (win-64): BSD-3-Clause 
libssh2 1.11.1-hcf80075_0 (linux-64): BSD-3-Clause 
libssh2 1.11.1-hed3591d_0 (osx-64): BSD-3-Clause 
libstdcxx 15.2.0-h934c35e_18 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx 15.2.0-hef695bb_18 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx-ng 15.2.0-hdbbeba8_18 (linux-aarch64): GPL-3.0-only WITH GCC-exception-3.1 
libstdcxx-ng 15.2.0-hdf11a46_18 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libzlib 1.3.2-h25fd6f3_2 (linux-64): Zlib 
libzlib 1.3.2-h8088a28_2 (osx-arm64): Zlib 
libzlib 1.3.2-hbb4bfdb_2 (osx-64): Zlib 
libzlib 1.3.2-hdc9db2a_2 (linux-aarch64): Zlib 
libzlib 1.3.2-hfd05255_2 (win-64): Zlib 
ncurses 6.6-h1d4f5a5_0 (osx-arm64): X11 AND BSD-3-Clause 
ncurses 6.6-hcc0dc9a_0 (osx-64): X11 AND BSD-3-Clause 
ncurses 6.6-hdb14827_0 (linux-64): X11 AND BSD-3-Clause 
ncurses 6.6-hf8d1292_0 (linux-aarch64): X11 AND BSD-3-Clause 
openssl 3.6.2-h35e630c_0 (linux-64): Apache-2.0 
openssl 3.6.2-h546c87b_0 (linux-aarch64): Apache-2.0 
openssl 3.6.2-hc881268_0 (osx-64): Apache-2.0 
openssl 3.6.2-hd24854e_0 (osx-arm64): Apache-2.0 
openssl 3.6.2-hf411b9b_0 (win-64): Apache-2.0 
ucrt 10.0.26100.0-h57928b3_0 (win-64): LicenseRef-MicrosoftWindowsSDK10 
vc 14.3-h41ae7f8_34 (win-64): BSD-3-Clause 
vc14_runtime 14.44.35208-h818238b_34 (win-64): LicenseRef-MicrosoftVisualCpp2015-2022Runtime 
vcomp14 14.44.35208-h818238b_34 (win-64): LicenseRef-MicrosoftVisualCpp2015-2022Runtime 
zstd 1.5.7-h3eecb57_6 (osx-64): BSD-3-Clause 
zstd 1.5.7-h85ac4a6_6 (linux-aarch64): BSD-3-Clause 
zstd 1.5.7-hb78ec9c_6 (linux-64): BSD-3-Clause 
zstd 1.5.7-hbf9d68e_6 (osx-arm64): BSD-3-Clause
