tests/snapshots/integration_tests__platform_env_restrictions_check.snap
---
source: tests/integration_tests.rs
expression: output
---

❌ The following dependencies are unsafe:

_openmp_mutex 4.5-2_gnu (linux-64): BSD-3-Clause
bzip2 1.0.8-hd590300_5 (linux-64): bzip2-1.0.6
ca-certificates 2024.6.2-hbcca054_0 (linux-64): ISC
ld_impl_linux-64 2.40-hf3520f5_7 (linux-64): GPL-3.0-only
libgcc-ng 14.1.0-h77fa898_0 (linux-64): GPL-3.0-only WITH GCC-exception-3.1
libgomp 14.1.0-h77fa898_0 (linux-64): GPL-3.0-only WITH GCC-exception-3.1
libnsl 2.0.1-hd590300_0 (linux-64): LGPL-2.1-only
libstdcxx-ng 14.1.0-hc0a3c3a_0 (linux-64): GPL-3.0-only WITH GCC-exception-3.1
libuuid 2.38.1-h0b41bf4_0 (linux-64): BSD-3-Clause
libxcrypt 4.4.36-hd590300_1 (linux-64): LGPL-2.1-or-later
libzlib 1.3.1-h4ab18f5_1 (linux-64): Zlib
ncurses 6.5-h59595ed_0 (linux-64): X11 AND BSD-3-Clause
nodeenv 1.9.1-pyhd8ed1ab_0 (noarch): BSD-3-Clause
pycparser 2.22-pyhd8ed1ab_0 (noarch): BSD-3-Clause
python 3.12.4-h194c7f8_0_cpython (linux-64): Python-2.0
python_abi 3.12-4_cp312 (linux-64): BSD-3-Clause
readline 8.2-h8228510_1 (linux-64): GPL-3.0-only
tk 8.6.13-noxft_h4845f30_101 (linux-64): TCL
tzdata 2024a-h0c530f3_0 (noarch): LicenseRef-Public-Domain
xz 5.2.6-h166bdaf_0 (linux-64): LGPL-2.1 and GPL-2.0 (Non-SPDX)
zlib 1.3.1-h4ab18f5_1 (linux-64): Zlib

❌ Unsafe licenses found! ❌
There were 26 safe licenses and 21 unsafe licenses.
