tests/snapshots/integration_tests__prefix_list.snap
---
source: tests/integration_tests.rs
expression: output
---
asttokens 2.4.1-pyhd8ed1ab_0 (noarch): Apache-2.0
bzip2 1.0.8-h99b78c6_7 (osx-arm64): bzip2-1.0.6
ca-certificates 2024.8.30-hf0a4a13_0 (osx-arm64): ISC
decorator 5.1.1-pyhd8ed1ab_0 (noarch): BSD-2-Clause
exceptiongroup 1.2.2-pyhd8ed1ab_0 (noarch): MIT and PSF-2.0
executing 2.1.0-pyhd8ed1ab_0 (noarch): MIT
ipython 8.28.0-pyh707e725_0 (noarch): BSD-3-Clause
jedi 0.19.1-pyhd8ed1ab_0 (noarch): MIT
libblas 3.9.0-24_osxarm64_openblas (osx-arm64): BSD-3-Clause
libcblas 3.9.0-24_osxarm64_openblas (osx-arm64): BSD-3-Clause
libcxx 19.1.2-ha82da77_0 (osx-arm64): Apache-2.0 WITH LLVM-exception
libexpat 2.6.3-hf9b8971_0 (osx-arm64): MIT
libffi 3.4.2-h3422bc3_5 (osx-arm64): MIT
libgfortran 5.0.0-13_2_0_hd922786_3 (osx-arm64): GPL-3.0-only WITH GCC-exception-3.1
libgfortran5 13.2.0-hf226fd6_3 (osx-arm64): GPL-3.0-only WITH GCC-exception-3.1
liblapack 3.9.0-24_osxarm64_openblas (osx-arm64): BSD-3-Clause
libmpdec 4.0.0-h99b78c6_0 (osx-arm64): BSD-2-Clause
libopenblas 0.3.27-openmp_h517c56d_1 (osx-arm64): BSD-3-Clause
libsqlite 3.46.1-hc14010f_0 (osx-arm64): Unlicense
libzlib 1.3.1-h8359307_2 (osx-arm64): Zlib
llvm-openmp 19.1.2-hb52a8e5_0 (osx-arm64): Apache-2.0 WITH LLVM-exception
matplotlib-inline 0.1.7-pyhd8ed1ab_0 (noarch): BSD-3-Clause
multipledispatch 0.6.0-pyhd8ed1ab_1 (noarch): BSD-3-Clause
ncurses 6.5-h7bae524_1 (osx-arm64): X11 AND BSD-3-Clause
numpy 2.1.2-py313hab0c69d_0 (osx-arm64): BSD-3-Clause
openssl 3.3.2-h8359307_0 (osx-arm64): Apache-2.0
pandas 2.2.3-py313h47b39a6_1 (osx-arm64): BSD-3-Clause
parso 0.8.4-pyhd8ed1ab_0 (noarch): MIT
pexpect 4.9.0-pyhd8ed1ab_0 (noarch): ISC
pickleshare 0.7.5-py_1003 (noarch): MIT
pip 24.2-pyh145f28c_1 (noarch): MIT
prompt-toolkit 3.0.48-pyha770c72_0 (noarch): BSD-3-Clause
ptyprocess 0.7.0-pyhd3deb0d_0 (noarch): ISC
pure_eval 0.2.3-pyhd8ed1ab_0 (noarch): MIT
pygments 2.18.0-pyhd8ed1ab_0 (noarch): BSD-2-Clause
python 3.13.0-h206b6c5_100_cp313 (osx-arm64): Python-2.0
python-dateutil 2.9.0-pyhd8ed1ab_0 (noarch): Apache-2.0
python-tzdata 2024.2-pyhd8ed1ab_0 (noarch): Apache-2.0
python_abi 3.13-5_cp313 (osx-arm64): BSD-3-Clause
pytz 2024.1-pyhd8ed1ab_0 (noarch): MIT
readline 8.2-h92ec313_1 (osx-arm64): GPL-3.0-only
six 1.16.0-pyh6c4a22f_0 (noarch): MIT
stack_data 0.6.2-pyhd8ed1ab_0 (noarch): MIT
tk 8.6.13-h5083fa2_1 (osx-arm64): TCL
traitlets 5.14.3-pyhd8ed1ab_0 (noarch): BSD-3-Clause
typing_extensions 4.12.2-pyha770c72_0 (noarch): PSF-2.0
tzdata 2024b-hc8b5060_0 (noarch): LicenseRef-Public-Domain
wcwidth 0.2.13-pyhd8ed1ab_0 (noarch): MIT
xz 5.2.6-h57fd34a_0 (osx-arm64): LGPL-2.1 and GPL-2.0 (Non-SPDX)
