tests/snapshots/integration_tests__pypi_ignore_check.snap
---
source: tests/integration_tests.rs
expression: output
---

❌ The following dependencies are unsafe:

_openmp_mutex 4.5-2_gnu (linux-64): BSD-3-Clause 
bzip2 1.0.8-h4bc722e_7 (linux-64): bzip2-1.0.6 
ca-certificates 2024.8.30-hbcca054_0 (linux-64): ISC 
ld_impl_linux-64 2.43-h712a8e2_1 (linux-64): GPL-3.0-only 
libgcc 14.1.0-h77fa898_1 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgcc-ng 14.1.0-h69a702a_1 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libgomp 14.1.0-h77fa898_1 (linux-64): GPL-3.0-only WITH GCC-exception-3.1 
libnsl 2.0.1-hd590300_0 (linux-64): LGPL-2.1-only 
libuuid 2.38.1-h0b41bf4_0 (linux-64): BSD-3-Clause 
libxcrypt 4.4.36-hd590300_1 (linux-64): LGPL-2.1-or-later 
libzlib 1.3.1-h4ab18f5_1 (linux-64): Zlib 
ncurses 6.5-he02047a_1 (linux-64): X11 AND BSD-3-Clause 
python 3.12.6-hc5c86c4_1_cpython (linux-64): Python-2.0 
readline 8.2-h8228510_1 (linux-64): GPL-3.0-only 
tk 8.6.13-noxft_h4845f30_101 (linux-64): TCL 
tzdata 2024a-h8827d51_1 (noarch): LicenseRef-Public-Domain 
xz 5.2.6-h166bdaf_0 (linux-64): LGPL-2.1 and GPL-2.0 (Non-SPDX)

❌ Unsafe licenses found! ❌
There were 4 safe licenses and 17 unsafe licenses.
